--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "1.2.6",
     "holderjs": "2.3.0",
     "angular-bootstrap": "~0.10.0",
-    "angular-strap": "~2.0.0-rc.2"
+    "angular-strap": "~2.0.0-rc.2",
+    "angular-flexslider": "v.1.2.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
