--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "holderjs": "2.3.0",
     "angular-bootstrap": "~0.10.0",
     "angular-strap": "~2.0.0-rc.2",
-    "angular-flexslider": "v.1.2.4"
+    "angular-flexslider": "v.1.2.4",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
