--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-bootstrap": "~0.10.0",
     "angular-strap": "~2.0.0-rc.2",
     "angular-flexslider": "v.1.2.4",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "angular-piwik": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
