--- a/dns.conf
+++ b/dns.conf
@@ -1,3 +1,3 @@
 piwik                   28800  A      31.170.167.90
-elodiedetoeuf.fr.        3592  A      192.30.252.153
-elodiedetoeuf.fr.        3592  A      192.30.252.154
+www.elodiedetoeuf.fr.     3592  CNAME  elodiedetoeuf.herokuapp.com.
+
