--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-strap": "~2.0.0-rc.2",
     "angular-flexslider": "v.1.2.4",
     "underscore": "~1.6.0",
-    "angular-piwik": "~1.0.2"
+    "angular-piwik": "~1.0.2",
+    "angular-translate": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
